--- a/css/styles.css
+++ b/css/styles.css
@@ -143,19 +143,16 @@ img {
 /* ----------герой--------*/
 
 .hero {
-  /* background-color: #2f303a; */
   text-align: center;
-  padding: 200px 0;
+  padding: 200px 0px;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
     url(../images/Img-bg.jpg);
-  max-width: 1600px;
-  min-height: 600px;
   background-size: cover;
   background-repeat: no-repeat;
-  /* background-position: center; */
+  background-position: center;
   background-color: #c4c4c4;
 }
 .hero-title {
@@ -171,7 +168,6 @@ img {
   margin-right: auto;
 }
 .hero-btn {
-  /* размер кнопки, прозрачная рамка */
   color: #ffffff;
   background-color: #2196f3;
   border: none;
@@ -184,7 +180,6 @@ img {
   padding: 10px 32px;
   text-align: center;
   display: inline-block;
-  /* margin-bottom: 200px; */
 }
 .hero-btn:hover,
 .hero-btn:focus {
@@ -212,6 +207,7 @@ img {
   background-color: #f5f4fa;
   width: 270px;
   height: 120px;
+  margin-bottom: 30px;
 }
 .feature-list {
   display: flex;
@@ -221,12 +217,9 @@ img {
 .section-feature {
   padding-top: 94px;
 }
-.thumb {
-  margin-bottom: 30px;
-}
+
 .feature-item {
   width: calc((100% - 90px) / 4);
-  height: 120px;
 }
 
 .feature-title {
@@ -254,7 +247,6 @@ img {
   letter-spacing: 0.03em;
   text-align: center;
   margin-bottom: 50px;
-  margin-top: 94px;
 }
 .work-list {
   display: flex;
@@ -278,15 +270,12 @@ img {
   align-items: center;
   color: #afb1b8;
 }
-.soc-link:hover {
-  background-color: var(--acсent-color);
-}
+.soc-link:hover,
 .soc-link:focus {
   background-color: var(--acсent-color);
 }
-.soc-link:hover .soc-icon {
-  fill: var(--primary-white-color);
-}
+
+.soc-link:hover .soc-icon,
 .soc-link:focus .soc-icon {
   fill: var(--primary-white-color);
 }
@@ -313,10 +302,13 @@ img {
 .staff-item {
   border-radius: 0px 0px 4px 4px;
   background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 .staff-list {
   display: flex;
   column-gap: 30px;
+  padding-bottom: 16px;
 }
 .staff-title {
   font-weight: 500;
@@ -343,7 +335,6 @@ img {
 }
 /* ------Постоянные клиенты */
 .client {
-  /* display: flex; */
   width: 170px;
   height: 92px;
   border-color: #afb1b8;
@@ -352,6 +343,8 @@ img {
   justify-content: center;
   align-items: center;
   gap: 30px;
+  fill: #afb1b8;
+  border-radius: 4px;
 }
 .client-list {
   display: flex;
@@ -368,7 +361,11 @@ img {
   padding-top: 94px;
   padding-bottom: 50px;
 }
-
+.client:hover,
+.client:focus {
+  border-color: var(--acсent-color);
+  fill: var(--acсent-color);
+}
 /* ------- футер ------- */
 .footer {
   background-color: #2f303a;
@@ -415,6 +412,43 @@ img {
   letter-spacing: 0.03em;
   text-decoration: none;
 }
+.footer-container {
+  display: flex;
+  align-items: baseline;
+}
+.join {
+  margin-left: 70px;
+}
+.footer-text {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+
+.footer-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+}
+.footer-link {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  fill: var(--primary-white-color);
+}
+.footer-link:hover,
+.footer-link:focus {
+  background-color: var(--acсent-color);
+}
 
 /* Портфолио */
 
@@ -447,6 +481,8 @@ img {
 .button-portfolio:focus {
   color: var(--primary-white-color);
   background-color: #188ce8;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 /* ------карточки портфолио----- */
 .picture-list {
@@ -474,4 +510,11 @@ img {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: 0;
+}
+
+.picture-item:hover,
+.picture-item:focus {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
